Add inclusions for source distribution
Signed-off-by: Webster Mudge <wmudge@cloudera.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,14 @@ dependencies = [
 lint = "pre-commit run -a"
 test = "pytest {args:tests}"
 
+[tool.hatch.build.targets.sdist]
+include = [
+    "LICENSE",
+    "README.md",
+    "cdpcurl",
+    "tests",
+]
+
 [build-system]
 requires = [
     "hatchling",
