--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,9 @@ dependencies = [
 
 [tool.hatch.envs.default.scripts]
 lint = "pre-commit run -a"
-test = "pytest {args:tests}"
+
+[[tool.hatch.envs.hatch-test.matrix]]
+python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
 [tool.hatch.build.targets.sdist]
 include = [
